# AECforWebAssembly

./: .gitignore  .gitlab-ci.yml  AEC_specification.html  AECforWebAssembly.cpp  AssemblyCode.cpp  CMakeLists.txt  CorruptCompilationContextException.cpp  InvalidTypenameException.cpp  JSONhelpers.cpp  LICENSE  NotImplementedException.cpp  README.md  TreeNode.cpp  TreeRootNode.cpp  alignedAccessTest.aec  alignedAccessTest.js  automaticTestOfHuffmanCoding.js  bitManipulations.cpp  break_and_continue_test.aec  break_and_continue_test.js  chainedComparisonsTest.aec  chainedComparisonsTest.js  compiler.cpp  compilingContext.cpp  emptyFunctionTest.aec  globalVariablesDeclarationTest.aec  leftHandSideConditionalTest.aec  leftHandSideConditionalTest.js  lgtm.yml  multiLineStringTest.aec  multiLineStringTest.js  namedArgumentsTest.aec  namedArgumentsTest.js  package.json  parser.cpp  semanticAnalyzer.cpp  sonar-project.properties  stringManipulationHelperFunctions.cpp  structureDeclarationTest.aec  structureDeclarationTest.js  (+6 more)
.github/: copilot-instructions.md
.github/workflows/: build.yml  cmake.yml
AVLInAEC/: AVLInAEC.aec  AVLInAEC.html  README.md  automatedTest.js  avl_api.js
Bilbo_Infokup2013/: README.md  bilbo.aec  bilbo.html
HavlikLaw/: README.md  havlik.aec  havlik.js
HuffmanCodingInAEC/: HuffmanCodingInAEC.aec  HuffmanCodingInAEC.html  README.md  automaticTest.js
Hurwitz/: README.md  hurwitz.aec  hurwitz.html
HybridSort/: HybridSort.aec  HybridSort.js  README.md
RedBlackTree/: README.md  RedBlackTree.aec  RedBlackTree.html  automatedTest.js  rbt_api.js
Roman_numerals/: README.md  roman_numerals.aec  roman_numerals.html
Roman_to_Decimal/: README.md  roman_to_decimal.aec  roman_to_decimal.html
SplayTree/: README.md  SplayTree.aec  SplayTree.html  automatedTest.js  splay_api.js
analogClock/: README.md  analogClock.aec  analogClock.html  analogClock.js
arithmeticOperatorsTest/: README.md  arithmeticOperatorsTest.aec  arithmeticOperatorsTest.html
birthday_paradox/: README.md  birthday_paradox.aec  birthday_paradox.html
chainedComparisonWithSideEffects/: README.md  chainedComparisonWithSideEffects.aec  chainedComparisonWithSideEffects.js
dragonCurve/: README.md  dragonCurve.aec  dragonCurve.html
euclidTest/: README.md  euclidTest.aec  euclidTest.html
hello_world_from_wasi/: README.md  hello_world_from_wasi.aec
multiplying-strings-aec/: README.md  multiplying-strings-aec.aec  multiplying-strings-aec.html
nQueensPuzzle/: README.md  nQueensPuzzle.aec  nQueensPuzzle.dart  nQueensPuzzle.html  nQueensPuzzle.py
permutationsTest/: README.md  permutationsTest.aec  permutationsTest.html
recursionTest/: README.md  recursionTest.aec  recursionTest.html  recursionTest_problematic.aec
